# solver.hs

./: LICENSE  README.md  solver.cabal
src/: Solver.hs
